apps/dev/debug-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-harvester
spec:
  template:
    spec:
      containers:
        - name: veidemann-browser-controller
