apps/dev/controller-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: veidemann-api
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-controller
spec:
  template:
    spec:
      containers:
        - name: veidemann-controller
